# neww

./: .gitignore  .luarc.json  Cargo.toml  Makefile  README.md  flake.nix
examples/: bar.css  bar.lua  counter.lua  wallpaper.lua
examples/background/: neww.ui
examples/bar/: init.lua  style.css
examples/button/: neww.ui
examples/clock/: neww.ui
examples/helloworld/: neww.ui
examples/wallpaper/: init.lua  style.css
nix/: gtk4-layer-shell.nix  lgi.nix
src/: application.rs  main.rs
src/lib/: mod.rs
src/lib/parser/: mod.rs  neww.rs  ui.rs
src/lua/: application.rs  macros.rs  mod.rs
src/lua/bindings/: macros.rs  mod.rs
src/lua/bindings/gdk/: cursor.rs  display.rs  drag.rs  mod.rs  monitor.rs  rectagle.rs  surface.rs
src/lua/bindings/glib/: mod.rs
src/lua/bindings/gtk/: adjustment.rs  align.rs  box.rs  button.rs  iface.rs  image.rs  justification.rs  label.rs  mod.rs  orientation.rs  range.rs  root.rs  scale.rs  widget.rs  window.rs
src/lua/bindings/gtk_layer_shell/: edge.rs  layer.rs  mod.rs
src/lua/bindings/pango/: mod.rs  wrap_mode.rs
src/lua/glib/: gstring.rs
src/lua/gtk/: mod.rs  widget.rs  window.rs
src/lua/gtk_layer_shell/: layer_shell.rs
src/neww/: __hooks.lua  gtk.lua  hooks.lua  init.lua  luax.lua
src/neww-gtk/: init.lua  renderer.lua
src/neww/renderer/: gtk.lua  noop.lua
src/testx/: init.lua
src/ui/: mod.rs  parser.rs  scripts.rs
src/ui/gtk/: mod.rs
src/ui/neww/: mod.rs
test/: init.lua
tests/: init.lua
