[package]
name = "neww"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "neww2gtk"
path = "src/bin/neww2gtk/main.rs"

[[bin]]
name = "neww"
path = "src/bin/neww/main.rs"

[lib]
name = "lib"
path = "src/lib/mod.rs"

[profile.release]
strip = true
lto = true
debug = false

[dependencies]
anyhow = "1"
derive_builder = "0.12"
env_logger = "0.10"
log = "0.4"
mlua = { version = "0.8", features = ["luajit", "macros"] }
quick-xml = { version = "0.28", features = ["serialize"] }
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
claims = "0.7"
